--- a/client/index.html
+++ b/client/index.html
@@ -50,6 +50,15 @@
   <p>Pool Units Address: <span id="poolunitsAddress"></span></p>
 </div>
 
+<h2>Pool Information:</h2>
+<div class="container">
+  <p>Token Pair:<br>
+    <pre id="tokenPair"></pre>
+    Liquidity:<br>
+  <pre id="liquidity"></pre>
+  </p>
+</div>
+
 <h2>Swap</h2>
 <div><select id="swapDropDown"></select></div>
 <input type="text" placeholder="Amount" id="inputAmount" />
@@ -74,7 +83,7 @@
 <p><button id="exactSwapToken">Exact Swap Tokens</button></p>
 <div class="container">
   <p>Receipt:<br>
-  <pre id="receipt"></pre>
+  <pre id="exactReceipt"></pre>
   </p>
 </div>
 
