adding add liquidity

--- a/client/index.html
+++ b/client/index.html
@@ -88,12 +88,21 @@
 </div>
 
 <h2>Add Liquidity</h2>
-<input type="text" placeholder="Token A Amount" id="tokenaAmount" />
-<input type="text" placeholder="Token B Amount" id="tokenbAmount" />
+
+<p>
+<pre id="tokenAAddress"></pre>
+
+<input type="text" placeholder="Token A Amount" id="tokenAAmount" /><br>
+  
+<pre id="tokenBAddress"></pre>
+</p>
+
+<input type="text" placeholder="Token B Amount" id="tokenBAmount" /><br>
+
 <p><button id="addLiquidity">Add Liquidity</button></p>
 <div class="container">
   <p>Receipt:<br>
-  <pre id="receipt"></pre>
+  <pre id="addLiquidityReceipt"></pre>
   </p>
 </div>
 
@@ -107,20 +116,7 @@
 </div>
 
 
-<h3>Get Liquidity</h3>
-
-<p><button id="getLiquidity">Get Liquidity</button></p>
-
-<div class="container">
-  <p>Token A:
-  <pre id="tokenALiquidity"></pre>
-  </p>
-  <p>Token B:
-    <pre id="tokenBLiquidity"></pre>
-  </p>
-</div>
-
-<h3>Get Token Pair ResourceAddress</h3>
+<!-- <h3>Get Token Pair ResourceAddress</h3>
 <p><button id="getTokenPair">Get TokenPair</button></p>
 
 <h3>Get Token Pair ResourceAddress</h3>
@@ -130,18 +126,13 @@
 <p><button id="getMetadata">Get TokenPair Metadata</button></p>
 
 <h3>Get Token Pair Metadata</h3>
-<p><button id="getMetadata">Get TokenPair Metadata</button></p>
+<p><button id="getMetadata">Get TokenPair Metadata</button></p> -->
 
-<h3>Get Total LP</h3>
+<!-- <h3>Get Total LP</h3>
 <p><button id="getTotalLP">Get Total LP</button></p>
 
 <h3>Get ResourceType</h3>
-<p><button id="getResourceType">Get ResourceType</button></p>
+<p><button id="getResourceType">Get ResourceType</button></p> -->
 
-
-
-
-
-    
   </body>
 </html>
