Adding resource metadata for display

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
 <p><button id="testTransaction">Test Transaction</button></p> -->
 
 <h2>Create Token</h2>
+<div><input type="text" placeholder="Token Name" id="tokenName" /></div>
 <p><button id="createToken">Create Token</button></p>
 <p>Resource Address:
   <pre id="newTokenAddress"></pre>
