Added metadata and remove liquidity (still not working)

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
 <div><select id="selectTokenA"></select></div>
 <input type="text" placeholder="Amount" id="amountA" />
 <div><select id="selectTokenB"></select></div>
-<input type="text" placeholder="Amount" id="amountB" />
+<input type="text" placeholder="Amount" id="amountB" /> <br>
 <input type="text" placeholder="Swap Fee" id="swapFee" />
 <p><button id="instantiateComponent">Instantiate component</button></p>
 <div class="container">
@@ -108,8 +108,8 @@
 </div>
 
 <h3>Remove Liquidity</h3>
-<input type="text" placeholder="Pool Units Amount" id="poolunitsAmount" />
-<p><button id="addLiquidity">Remove Liquidity</button></p>
+<input type="text" placeholder="Pool Units Amount" id="poolUnitsAmount" />
+<p><button id="removeLiquidity">Remove Liquidity</button></p>
 <div class="container">
   <p>Receipt:<br>
   <pre id="receipt"></pre>
