Fixing Remove Liquidity

--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
 <p><button id="instantiateComponent">Instantiate component</button></p>
 <div class="container">
   <p>Component Address: <span id="componentAddress"></span></p>
-  <p>Pool Units Address: <span id="poolunitsAddress"></span></p>
+  <p>Pool Units Address: <span id="poolUnitsAddress"></span></p>
   <p>
   <pre><a class="instantiateComponentTx" href="#" target="_blank" style="display: none;">View transaction</a></pre>
   </p> 
