Setting up RET transactions

--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,20 @@
   </p>
 </div>
 
+<h2>Get RCnet Tokens</h2>
+<p><button id="getRcnetTokens">Get RCnet Tokens</button></p>
+
+<h2>Deploy Package</h2>
+<input type="file" id="fileWasm">
+<input type="file" id="fileSchema">
+<p><button id="deployPackage">Deploy Package</button></p>
+<p>Package Address:
+  <pre id="newPackageAddress"></pre>
+</p> 
+<p>
+<pre><a class="deployPackageTx" href="#" target="_blank" style="display: none;">View transaction</a></pre>
+</p> 
+
 
 <h2>Create Token</h2>
 <div><input type="text" placeholder="Token Name" id="tokenName" /></div>
