Adding royalty (not yet functional)

--- a/client/index.html
+++ b/client/index.html
@@ -44,8 +44,11 @@
 <pre><a class="deployPackageTx" href="#" target="_blank" style="display: none;">View transaction</a></pre>
 </p> 
 
-<h2></h2>
+<h3>Set Package Royalty</h3>
+<p><button id="setRoyalty">Set Royalty</button></p>
 
+<h3>Claim Royalty</h3>
+<p><button id="claimRoyalty">Claim Royalty</button></p>
 
 <h2>Create Token</h2>
 <div><input type="text" placeholder="Token Name" id="tokenName" /></div>
